<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.rahul</groupId>
	<artifactId>springboot</artifactId>
	<version>0.0.1</version>
	<packaging>jar</packaging>

	<name>springboot</name>
	<description>Project for Spring Boot Jenkins</description>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>1.5.4.RELEASE</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>1.8</java.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			
		</dependency>
		
	
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				
			</plugin>
			<plugin>
   				<groupId>org.apache.maven.plugins</groupId>
   				<artifactId>maven-deploy-plugin</artifactId>
   				<version>${maven-deploy-plugin.version}</version>
				<executions>
				    <execution>
					    <id>default-deploy</id>
					    <phase>deploy</phase>
					    <goals>
						    <goal>deploy</goal>
				            </goals>
				    </execution>
			         </executions>		    
						    
   			</plugin>
			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				
				<configuration>
					<forkCount>3</forkCount>
					<reuseForks>true</reuseForks>
					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
				</configuration>
			</plugin>	
			
				
			
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.7.9</version>
				
				
				<executions>
					<execution>
						<id>default-prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>default-report</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			
			
		</plugins>
	</build>
        
	<distributionManagement>
    <snapshotRepository>
      <id>artifactory-server</id>
      <url>http://52.251.43.239:8081/artifactory/libs-snapshot-local/</url>
    </snapshotRepository>
	<repository>
		<id>artifactory-server</id>
        <url>http://52.251.43.239:8081/artifactory/libs-release-local</url>
    </repository>
  
  </distributionManagement>

	
	
</project>
